--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ nexus-*.tar
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
+/priv/ca/
+/priv/devices/
+
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
